<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/register_layout"
    tools:context="qaworkshops.android.netguru.co.qaworshopsandroid.feature.register.registerActivity">

    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/first_name_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AddItemTextInputStyle">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_first_name"
                    android:inputType="textCapWords"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/last_name_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AddItemTextInputStyle">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_last_name"
                    android:inputType="textCapWords"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AddItemTextInputStyle">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AddItemTextInputStyle">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/register"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:text="@string/your_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/birthday_text_view" />

            <Button
                android:id="@+id/set_birthday_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_set_birthday"
                android:textStyle="bold" />

            <TextView
                android:text="@string/select_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/select_country_spinner" />

            <TextView
                android:text="@string/select_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/radio_group">

                <RadioButton
                    android:text="@string/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/male_radio_button"
                    android:layout_weight="1" />

                <RadioButton
                    android:text="@string/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/female_radio_button"
                    android:layout_weight="1" />

                <RadioButton
                    android:text="@string/other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/other_radio_button"
                    android:layout_weight="1" />
            </RadioGroup>

            <Button
                android:id="@+id/sign_up_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_register"
                android:textStyle="bold"
                android:visibility="gone"/>

            <Button
                android:id="@+id/sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/have_account_sign_in"
                android:textStyle="bold"
                android:visibility="gone"/>

            <Button
                android:id="@+id/edit_profile_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/edit_profile"
                android:textStyle="bold"
                android:visibility="gone"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
